[package]
name = "x-log4rs-sqlite"
version = "0.0.3"
edition = "2021"
license = "MIT/Apache-2.0"
authors = ["Maciej Pietrzak <mp@typesafe.org>"]
keywords = ["log", "logger", "logging"]
description = "Experimental log4rs appender that saves logs in SQLite database"
repository = "https://github.com/mpietrzak/x-log4rs-sqlite"

[dependencies]
anyhow = "^1"
chrono = "^0.4.30"
log = "^0.4"
log4rs = "^1"
rusqlite = "^0.29.0"
serde = "^1"
uuid = { features = ["fast-rng", "v4"], version = "^1.4.1" }
